experience section added

--- a/src/assets/home.scss
+++ b/src/assets/home.scss
@@ -27,7 +27,7 @@ header {
 .section-header {
   color: white;
   max-width: 50%;
-
+margin-bottom: 3rem;
   h1 {
     font-size: 2rem;
   }
@@ -65,9 +65,13 @@ header {
     cursor: pointer;
   }
 }
- 
-#exp-table{
-    display: grid;
+
+#exp-table {
+  display: grid;
+  grid-template-columns: 2fr 8fr;
+  min-height: 300px;
+  max-width: 950px;
+  color: white;
 }
 .tabs {
   ul {
@@ -76,14 +80,29 @@ header {
 }
 
 .tablink-btn {
-  color: white;
+  
   background-color: transparent;
-  width: 150px;
+  width: 100%;
   border-width: 0 0 2px 0;
   margin: 0.5rem 0 0 0;
   padding-bottom: 2px;
+
+  &:hover {
+    border-color: #a8b6d8;
+  }
+
+  &.active{
+      border-color: #a8b6d8;
+  }
 }
 
-.tablink-btn:hover {
-  border-color: #a8b6d8;
+.tab-content {
+  border: solid;
+  border-color: #b65656;
+  border-radius: 15px;
+  width: 100%;
+  height: 100%;
+  display: none;
+
+  padding: 1rem;
 }
