added multiple sections

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -2,4 +2,5 @@
 @import './animations.scss';
 @import './fonts.scss';
 @import './name-card.scss';
-
+@import './sectionSkills.scss';
+@import './sectionProjects.scss';
