--- a/src/assets/home.scss
+++ b/src/assets/home.scss
@@ -7,6 +7,15 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 
+#preloader{
+  background: #212f53 url(./Loader.gif) no-repeat center center;
+  background-size: 15%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
+}
+
 section {
   position: relative;
   display: flex;
@@ -15,6 +24,12 @@ section {
   height: 100vh;
   box-sizing: border-box;
 }
+#skill-section{
+  padding: 5%;
+  height: fit-content;
+}
+
+
 
 header {
   min-height: 100px;
