--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -5,3 +5,4 @@
 @import './sectionSkills.scss';
 @import './sectionProjects.scss';
 @import './animatedTabs.scss';
+@import './sectionContact.scss';
