--- a/src/assets/sectionSkills.scss
+++ b/src/assets/sectionSkills.scss
@@ -2,16 +2,18 @@
 
 #skills-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     max-height: 60%;
+    max-width: 1200px;
     row-gap: 10px;
     color: white;
+    margin-left: 2rem;
 }
 
 
 .skill-item{
-    width: 30%;
+    width: clamp(500px, 50%, 600px);
     
     
     .skill-title{
@@ -31,7 +33,6 @@
 }
 
 .progress-bar{
-
     position: relative;
     width: 80%;
     height: 20px;
