--- a/src/assets/name-card.scss
+++ b/src/assets/name-card.scss
@@ -1,19 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&family=Quicksand:wght@300&display=swap");
+@import "./variables.scss";
+
 
 #card-container {
-    display: grid;
+    display: flex;
     width: 100%;
     margin-bottom: 3rem;
+    align-items: stretch;
 }
-
+#profile-photo{
+  align-self: flex-end;
+  height: 250px;
+ img{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+ }
+}
 .name-card{
   color: white;
   width: 65%;
+
+  padding: 1rem;
+ 
   h1{
     font-size: 3rem;
   }
   h3{
     font-size: 1.5rem;
+    color: $text-gray;
   }
 }
 
+  
