--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,2 +1,15 @@
 $bgk-primary: #212f53;
-$border-red: #b65656;
+$bkg-dark: #111b35;
+
+$text-gray: #dddddd;
+//$border-red: #b65656;
+$border-red: #a22e2e;
+$border-red-dark: #a22e2e;
+$border-highlight: #64ffda;
+$border-highlight-bkup: #4cf0a3;
+
+//skill bars
+//030f2e
+
+$bgk-components: #111b35;
+$bgk-components-dark: #0d172f;
