--- a/src/assets/animatedTabs.scss
+++ b/src/assets/animatedTabs.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 #exp-tabs,
 #pr-tabs {
   display: grid;
@@ -7,41 +9,46 @@
   overflow: hidden;
   color: white;
   padding: 1rem;
+  
 }
 
 .tabs {
   ul {
-    list-style-type: square;
+    list-style-type: none;
     li {
       display: flex;
       justify-content: flex-end;
+      height: 3rem;
     }
   }
 }
 
 .tablink-btn {
   background-color: transparent;
-  width: 80%;
+  font-size: 1.10rem;
+  width: 100%;
   border-width: 0 0 2px 0;
+  border-color: $border-red;
   margin: 0.5rem 0 0 0;
   padding-bottom: 2px;
   color: white;
   display: none;
-  justify-self: end;
+  flex-wrap: nowrap;
   padding-right: 1rem;
   &:hover {
-    border-color: #a8b6d8;
+    border-color: $border-highlight;
     cursor: pointer;
   }
 
   &.active {
-    border-color: #a8b6d8;
+    border-color: $border-highlight;
   }
 
   img {
     margin-right: 1.5rem;
     align-self: flex-start;
   }
+  
 }
 
 .tablink-btn-animation {
@@ -61,11 +68,11 @@
 }
 
 .tab-content {
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
   border: solid;
-  border-color: #b65656;
-  border-radius: 15px;
+  border-color: $border-red;
+ // border-radius: 15px;
   display: none;
   padding: 1rem;
   flex-direction: row;
