--- a/src/assets/home.scss
+++ b/src/assets/home.scss
@@ -145,7 +145,7 @@ header {
 #opt-links {
   display: flex;
   flex-direction: column;
-  //transition: gap 0.5s ease;
+  transition: gap 0.2s ease all;
   gap: 0.3rem;
 }
 
